# wl-clipboard

./: .gitignore  CMakeLists.txt  README.md
cmake/: WaylandProtocols.cmake  toolchain-aarch64-linux-gnu.cmake
protocols/: wlr-data-control-unstable-v1.xml
scripts/bench/: README.md  clipboard-latency.sh  stats.awk
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  commands.h  copy.cpp  options.cpp  options.h  paste.cpp  protocols.cpp
src/clipboard/: CMakeLists.txt  backend.h  data_control.cpp  data_control.h  data_device.cpp  data_device.h  factory.cpp  factory.h  handcrafted.cpp  handcrafted.h  transfer.cpp  transfer.h  x11.cpp  x11.h
src/core/: CMakeLists.txt  fd.cpp  fd.h  log.cpp  log.h  mime.cpp  mime.h
src/wayland/: CMakeLists.txt  state.cpp  state.h
src/wire/: CMakeLists.txt  wire.cpp  wire.h
